<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/parentHomescreenFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/tasks" />

    <item
        android:id="@+id/wallet"
        android:enabled="true"
        android:icon="@drawable/ic_wallet"
        android:title="@string/wallet" />

    <item
        android:id="@+id/fab"
        android:enabled="true"
        android:title="" />

    <item
        android:id="@+id/awards"
        android:enabled="true"
        android:icon="@drawable/ic_awards"
        android:title="@string/awards" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/profile" />
</menu>
