<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo_profile"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/primary_midnight"
        android:layout_marginTop="@dimen/spacing.large"
        android:layout_marginStart="@dimen/spacing.large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_method_change_photo"
        android:textColor="@color/primary_gray"
        android:layout_marginStart="@dimen/spacing.large"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/selfie_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_selfie"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textColor="@color/primary_juicy_grape"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <TextView
        android:id="@+id/load_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_from_gallery"
        android:textColor="@color/primary_juicy_grape"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selfie_button" />

    <TextView
        android:id="@+id/negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/primary_midnight"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:paddingBottom="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_photo_button" />
</androidx.constraintlayout.widget.ConstraintLayout>