<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="@dimen/spacing.large"
        android:text="@string/title_no_camera_permission"
        android:textColor="@color/primary_midnight"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="@dimen/spacing.large"
        android:text="@string/message_no_camera_permission"
        android:textColor="@color/primary_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="20dp"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@color/primary_juicy_grape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <TextView
        android:id="@+id/negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="20dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/primary_midnight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintEnd_toStartOf="@id/positive_button" />
</androidx.constraintlayout.widget.ConstraintLayout>