<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/spacing.normal"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/partial_layout_edit_information" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_demo_bold"
            android:text="@string/password"
            android:textColor="@color/primary_midnight"
            android:textSize="@dimen/text_size.large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <com.projectx.householdtasks.presentation.support.CustomTextInputLayout
            android:id="@+id/current_password_layout"
            style="@style/CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.large"
            android:gravity="bottom"
            android:hint="@string/current_password"
            app:layout_constraintBottom_toTopOf="@id/new_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_password"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:inputType="textPassword" />
        </com.projectx.householdtasks.presentation.support.CustomTextInputLayout>

        <com.projectx.householdtasks.presentation.support.CustomTextInputLayout
            android:id="@+id/new_password_layout"
            style="@style/CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.small"
            android:hint="@string/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:inputType="textPassword" />
        </com.projectx.householdtasks.presentation.support.CustomTextInputLayout>

        <com.projectx.householdtasks.presentation.support.CustomTextInputLayout
            android:id="@+id/password_confirmation_layout"
            style="@style/CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.small"
            android:hint="@string/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirmation"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:inputType="textPassword" />
        </com.projectx.householdtasks.presentation.support.CustomTextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save_changes"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:enabled="false"
            android:padding="14dp"
            android:text="@string/save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_confirmation_layout" />

        <TextView
            android:id="@+id/help_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="@dimen/spacing.normal"
            android:layout_marginBottom="40dp"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center"
            android:text="@string/changes_saved"
            android:textAllCaps="false"
            android:textColor="@color/primary_midnight"
            android:textColorLink="@color/primary_color"
            android:textSize="@dimen/text_size.small"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_save_changes" />

        <TextView
            android:id="@+id/help_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing.large"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center"
            android:text="@string/help_message_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/primary_midnight"
            android:textColorLink="@color/primary_color"
            android:textSize="@dimen/text_size.small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>